# juju-backend

./: .env  Cargo.toml
migrations/: 20230310015132_create_table.down.sql  20230310015132_create_table.up.sql  20230310015221_update_schema.down.sql  20230310015221_update_schema.up.sql  20230310015306_add_columns.down.sql  20230310015306_add_columns.up.sql  20230310015349_add_date_range_table.down.sql  20230310015349_add_date_range_table.up.sql  20230310015439_chnage_dates_column_name.down.sql  20230310015439_chnage_dates_column_name.up.sql  20230310015509_modify_table.up.sql  20230310015547_drop_votes_status.down.sql  20230310015547_drop_votes_status.up.sql  20230310015626_add_read_mark.down.sql  20230310015626_add_read_mark.up.sql  20230310015701_add_answer_mark.down.sql  20230310015701_add_answer_mark.up.sql  20230310015748_modify_vote_marks.down.sql  20230310015748_modify_vote_marks.up.sql  20230310015816_add_version_hash.down.sql  20230310015816_add_version_hash.up.sql  20230310015908_modify_update_marks.down.sql  20230310015908_modify_update_marks.up.sql  20230310020005_add_upload_file.up.sql  20230318015058_change_question_type.down.sql  20230318015058_change_question_type.up.sql  20230327131828_modify_answers.down.sql  20230327131828_modify_answers.up.sql  20230327140353_modify_answers.down.sql  20230327140353_modify_answers.up.sql  20230411131816_create_join_applications.down.sql  20230411131816_create_join_applications.up.sql  20230412114641_create_organization_managers.down.sql  20230412114641_create_organization_managers.up.sql  20230415130253_rename_users_organizations.down.sql  (+24 more)
(+108 files in other folders)
