[package]
name = "juju"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
actix-web = "4.3.1"
dotenv = "*"
chrono = { version = "*", features = ["serde"] }
casbin = { version = "*", features = ["logging"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
jsonwebtoken = "*"
thiserror = "*"
futures-util = "0.3.19"
sha2 = "0.10.2"
hex = "*"
rand = "*"
env_logger = "*"
actix-multipart = "*"
futures = { version = "*", features = ["std", "alloc"] }
bytes = "1.1.0"
hex-literal = "*"
actix-files = "0.6.2"
sqlx = { version = "0.6.2", features = [
	"chrono",
	"postgres",
	"runtime-tokio-native-tls",
] }
sqlx-insert = { version = "*", git = "https://github.com/wangjun861205/sqlx-insert" }
